--- a/youtube.html
+++ b/youtube.html
@@ -12,6 +12,7 @@
             .video-preview{
                 width: 300px;
                 display: inline-block;
+                flex: 1;
                 vertical-align: top;
                 margin-right: 15px;
             }
@@ -47,6 +48,16 @@
             <p class="video-sttus">
                 19M views.4 years ago
             </p> 
+        </div>
+
+        <div>
+            <img src="thumbnails/thumbnail-3.webp" alt="unable to load the image">
+            <p class="video-title">
+                Crazy Tik Toks Taken moments before ..
+            </p>
+            <p>
+                
+            </p>
         </div>
        
     </body>
