--- a/supersimple-dev-html-css course/twitter-practice.html
+++ b/supersimple-dev-html-css course/twitter-practice.html
@@ -7,7 +7,36 @@
     <body>
         <div class="container">
             <div class="profile-image-container">
-                <img class="profile-image" src="henry-profile-image.jpg" alt="image">
+                <img class="profile-image" src="resources/round-profile-image.webp" alt="image">
+            </div>
+            <div class="profile-description">
+
+                <!-- profile section top container -->
+                <div class="top">
+                    <div class="name"><b><p>supersimple.dev </b> <span class="grey-colored-text">@SuperSimpleDev . Nov 17 ,2021</span></p> </div>
+                    <div class="dots"> <img src="dots-icon.png" alt="" class="dots-image"> </div>
+                </div>
+
+                <!-- profile section middle container -->
+                <div class="mid">
+                    <p class="middle-section-para">Working on HTML CSS tutorial atm . In the planning phase, looking really good.</p>
+                </div>
+
+                <!-- profile section bottom container -->
+                <div class="bottom">
+                    <div><img class="comment-image" src="resources/comment-image.png" alt="comment"></div> <!-- comment-image -->
+                    <div><img class="replay-image" src="resources/replay-icon.jpg" alt="replay"></div> <!-- replay-image -->
+                    <div><img class="like-image" src="resources/heart-icon.png" alt="like"></div> <!-- like-image -->
+                    <div><img class="upload-image" src="resources/upload-icon-image.jpg" alt="upload"></div> <!-- upload-image -->
+                    <div><img class="analytics-image" src="resources\analytics-icon-image.png" alt="analytics"></div> <!-- analytics-image -->
+                </div>
+            </div>
+        </div>
+
+        
+        <div class="container">
+            <div class="profile-image-container">
+                <img class="profile-image" src="resources/round-profile-image.webp" alt="image">
             </div>
             <div class="profile-description">
 
