--- a/supersimple-dev-html-css course/twitter-practice.html
+++ b/supersimple-dev-html-css course/twitter-practice.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="twitter-box.css">
     </head>
     <body>
+
+        <!-- First twitter box -->
+
         <div class="container">
             <div class="profile-image-container">
                 <img class="profile-image" src="resources/round-profile-image.webp" alt="image">
@@ -33,10 +36,10 @@
             </div>
         </div>
 
-        
+        <!-- second twitter box  -->
         <div class="container">
             <div class="profile-image-container">
-                <img class="profile-image" src="resources/round-profile-image.webp" alt="image">
+                <img class="profile-image" src="resources/male-round-profile-image.jpg" alt="image">
             </div>
             <div class="profile-description">
 
@@ -61,5 +64,7 @@
                 </div>
             </div>
         </div>
+
+
     </body>
 </html>
