--- a/youtube.html
+++ b/youtube.html
@@ -13,6 +13,8 @@
                 margin-bottom: 0px;
             }
             p{
+                margin-top: 0;
+                margin-bottom: 0;
                 font-family: Roboto, Arial;
             }
             .search-bar{
@@ -96,7 +98,7 @@
         </div>
 
 
-       <div class="video-preview">
+       <div class="video-preview"> <!--second video-preview-->
         <div class="thumbnail-row">
             <img class= "thumbnail" src="thumbnails/thumbnail-2.webp" alt="unable to load the image">
         </div>
@@ -115,13 +117,31 @@
                     19M views . 4 years ago
                 </p>
             </div>
-
         </div>
-       </div>
+    </div>
         
-
-      
-
+   
+    <div class="video-preview"> <!--third video-preview-->
+        <div class="thumbnail-row">
+            <img class= "thumbnail" src="thumbnails/thumbnail-3.webp" alt="unable to load the image">
+        </div>
+        <div>
+            <div class="channel-picture">
+                <img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt="">
+            </div>
+            <div class="video-info">
+                <p class="video-title">
+                    Crazy Tik Toks Taken Moments Before Disaster
+                </p>
+                <p class="video-author">
+                    SSSniperWolf
+                </p>
+                <p class="video-status">
+                    12M views . 1 year ago
+                </p>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
 
