--- a/supersimple-dev-html-css course/grid.html
+++ b/supersimple-dev-html-css course/grid.html
@@ -3,16 +3,150 @@
     <head>
         <title>Grid practice</title>
     </head>
-    <body>
+    <body style="padding-bottom:500px;">
+        <!--first-division -->
         <div 
         style="
         display: grid;
         grid-template-columns: 100px 100px;
-        "
+        margin-bottom: 5px;
+        ">
 
-        >
-            <div style="background-color: lightblue;"> div 1</div>
-            <div style="background-color: lightpink;"> div2</div>
+            <div style="background-color: 
+            lightblue;"> div 1</div>
+            <div style="background-color: 
+            lightpink;"> div 2
+            <p>text area</p>
+            </div>      
+        </div>
+
+          <!-- second-division -->
+        <div 
+        style="
+        display: grid;
+        grid-template-columns: 100px 100px;
+        ">
+
+            <div style="background-color: 
+            lightblue;"> div 1</div>
+            <div style="background-color: 
+            lightpink;"> div 2
+            <p>text area</p>
+            </div>    
+        </div>
+
+        <!-- third-division-->
+        <div 
+        style="
+        display: grid;
+        grid-template-columns: 100px 100px 200px;
+        margin-top: 5px;
+        ">
+
+            <div style="background-color: 
+            lightblue;"> div 1</div>
+            <div style="background-color: 
+            lightpink;"> div 2
+            <p>text area</p>
+            </div>
+            <div style="background-color: 
+            lightblue;"> div 3</div>
+        </div>
+
+        <!--fourth division-->
+        <div 
+        style="
+        display: grid;
+        grid-template-columns: 100px 1fr;
+        margin-top: 5px;
+        ">
+
+            <div style="background-color: 
+            lightblue;"> div 1</div>
+            <div style="background-color: 
+            lightpink;"> div 2
+            <p>text area</p>
+            </div>
+        </div>
+
+        <!--fifth division-->
+        <div 
+        style="
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 5px;
+        ">
+
+            <div style="background-color: 
+            lightblue;"> div 1</div>
+            <div style="background-color: 
+            lightpink;"> div 2
+            <p>text area</p>
+            </div>
+        </div>
+
+        <!--sixth division-->
+        <div 
+        style="
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        margin-top: 5px;
+        ">
+
+            <div style="background-color: 
+            lightblue;"> 1fr </div>
+            <div style="background-color: 
+            lightpink;"> 2fr
+            <p>text area</p>
+            </div>
+        </div>
+
+
+        <!--seventh division-->
+        <div 
+        style="
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 5px;
+        ">
+
+            <div style="background-color: 
+            lightblue;"> 1fr </div>
+            <div style="background-color: 
+            lightpink;"> 1fr
+            <p>text area</p>
+            </div>
+            <div style="background-color:
+             lightblue;"> 1fr</div>
+            </div>
+        </div>
+
+
+        <!--eightg column-->
+        <div 
+        style="
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 20px;
+        row-gap: 30px;
+        margin-top: 20px;
+        ">
+
+            <div style="background-color: 
+            lightblue; height:200px; "> 1fr </div>
+            <div style="background-color: 
+            lightpink; height:200px; "> 1fr </div>
+            <div style="background-color:
+             lightblue; height:200px; "> 1fr</div>
+             <div style="background-color: 
+             lightpink; height:200px; "> 1fr </div>
+              <div style="background-color: 
+              lightblue; height:200px; "> 1fr </div>
+              <div style="background-color: 
+              lightpink; height:200px; "> 1fr </div>
+
+            </div>
         </div>
     </body>
+
 </html>
