--- a/supersimple-dev-html-css course/challenge-exercise12g.html
+++ b/supersimple-dev-html-css course/challenge-exercise12g.html
@@ -7,12 +7,15 @@
                 margin: 0;
             }
             .container{
+                margin-left: 10px;
                 display: flex;
                 align-items: center;
+                margin-bottom:20px;
             }
             .left
             {
                 width: 70px;
+                margin-right: 15px;
                 
             }
             .image{
@@ -42,6 +45,20 @@
                 width:75px;
                
             }
+            .follow
+            {
+                border:none;
+                background-color: rgb(6, 118, 246);
+                color:white;
+                font-family:Arial;
+                font-size:22px;
+                font-weight: bolder;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                padding-right: 15px;
+                padding-left: 15px;
+                border-radius: 5px;
+            }
         </style>
     </head>
     <body>
@@ -55,8 +72,36 @@
                 <p class="popularity">Popular</p>
             </div>
             <div class="right">
-                <button class="follow">follow</button>
+                <button class="follow">Follow</button>
+            </div>            
+        </div>
+
+        <div class="container">
+            <div class="left">
+                <img class="image" src="resources/cat-profileimage-2.jpeg" alt="unable to load the image">
             </div>
+            <div class="middle">
+                <p class="name">Mimi</p>
+                <p class="type">Sleepy Cat</p>
+                <p class="popularity">Popular</p>
+            </div>
+            <div class="right">
+                <button class="follow">Follow</button>
+            </div>            
+        </div>
+
+        <div class="container">
+            <div class="left">
+                <img class="image" src="resources/cat-profileimage-3.jpg" alt="unable to load the image">
+            </div>
+            <div class="middle">
+                <p class="name">Rex</p>
+                <p class="type">Happy Cat</p>
+                <p class="popularity">Popular</p>
+            </div>
+            <div class="right">
+                <button class="follow">Follow</button>
+            </div>            
         </div>
     </body>
 </html>
