--- a/youtube.html
+++ b/youtube.html
@@ -16,11 +16,25 @@
     <body>    
 
         <div class="header">
-            <div class="left-section">left-section</div>
+            <div class="left-section">
+                <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="unable to load the menue">
+                <img class="youtube-logo" src="icons/youtube-logo.svg" alt="">
+            </div>
             <div class="middle-section">
                 <input class="search-bar" type="text" placeholder="Search">
+                <button class="search-button">
+                    <img  class="search-icon" src="icons/search.svg" alt="">
+                </button>
+                <button class="voice-search-button">
+                    <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="unable to load the menu">
+                </button>
             </div>
-            <div class="right-section">right-section</div>
+            <div class="right-section">
+                <img class="upload-icon" src="icons/upload-icon.svg" alt="unable to load the upload icon">
+                <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="unable to load the youtube apps">
+                <img class="notifications-icon" src="icons/notifications.svg" alt="unable to load the notifications">
+                <img class="current-user-picture" src="channel-pictures/my-channel-profile-image.jpeg" alt="unable to load the image">
+            </div>
            
 
         </div>
