--- a/supersimple-dev-html-css course/exercise-14c.html
+++ b/supersimple-dev-html-css course/exercise-14c.html
@@ -3,7 +3,7 @@
     <head>
         <title>
             postion-practice
-        </title>
+        /title>
         <style>
             .full-cover{
                 position: fixed;
@@ -12,7 +12,6 @@
                 bottom :0;
                 left:0;
                 background-color: black;
-
             }
         </style>
     </head>
