--- a/supersimple-dev-html-css course/positions.html
+++ b/supersimple-dev-html-css course/positions.html
@@ -15,6 +15,7 @@
         left: 0px;    
         right: 0px;
         height: 50px; 
+        z-index: 100;
         ">
             header
         </div>
@@ -28,16 +29,36 @@
         width:70px;
         bottom:0;
 
-        ">side-bar</div>
+        ">side-bar
+        <div style="position: absolute;
+        background-color: red;
+        color:white;
+        top:0px;
+        right:0px;
+        "
+        > X</div>    
+    </div>
 
         <div style="background-color:lightblue;
         height: 200px;
         width:200px;
         position: static;"
+
         >div1</div>
         <div style="background-color: lightpink;
         height: 200px;
-        width: 200px;"
-        >div2</div>
+        width: 200px;
+        position: relative;"
+        
+        >div2
+        <div style="position: absolute;
+        background-color: black;
+        color:white;
+        bottom:10px;
+        right:10px;
+        "
+        > 5.00</div>    
+    </div>
+
     </body>
 </html>
