--- a/youtube.html
+++ b/youtube.html
@@ -258,13 +258,183 @@
                 
            
                 <div class="video-preview"> <!--sixth video-preview-->
-                <div class="thumbnail-row">
-                   <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
-                    <img class= "thumbnail" src="thumbnails/thumbnail-6.webp" alt="unable to load the image">
-                   </a>
+                    <div class="thumbnail-row">
+                         <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                            <img class= "thumbnail" src="thumbnails/thumbnail-6.webp" alt="unable to load the image">
+                         </a>
                     <div class="video-time">19:59</div>
+                    </div>
+                    <div class="video-info-grid">
+                    <div class="channel-picture">
+                       <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                       </a> 
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                           Anything You Can Fit In The Circle I'll Pay For
+                        </p>
+                        <p class="video-author">
+                            MrBeast
+                        </p>
+                        <p class="video-status">
+                            141M views . 1 year ago
+                        </p>
+                    </div>
                 </div>
-                <div class="video-info-grid">
+                </div>
+
+                <div class="video-preview"> <!--seventh video-preview-->
+                    <div class="thumbnail-row">
+                         <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                            <img class= "thumbnail" src="thumbnails/thumbnail-7.webp" alt="unable to load the image">
+                         </a>
+                    <div class="video-time">19:59</div>
+                    </div>
+                    <div class="video-info-grid">
+                    <div class="channel-picture">
+                       <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                       </a> 
+                    </div>
+                    <div class="video-info">
+                        <a style="text-decoration: none;" href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                            <p class="video-title">
+                                Anything You Can Fit In The Circle I'll Pay For
+                             </p>
+                        </a>
+                        <p class="video-author">
+                            MrBeast
+                        </p>
+                        <p class="video-status">
+                            141M views . 1 year ago
+                        </p>
+                    </div>
+                </div>
+                </div>
+
+
+                <div class="video-preview"> <!--sixth video-preview-->
+                    <div class="thumbnail-row">
+                         <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                            <img class= "thumbnail" src="thumbnails/thumbnail-6.webp" alt="unable to load the image">
+                         </a>
+                    <div class="video-time">19:59</div>
+                    </div>
+                    <div class="video-info-grid">
+                    <div class="channel-picture">
+                       <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                       </a> 
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                           Anything You Can Fit In The Circle I'll Pay For
+                        </p>
+                        <p class="video-author">
+                            MrBeast
+                        </p>
+                        <p class="video-status">
+                            141M views . 1 year ago
+                        </p>
+                    </div>
+                </div>
+                </div>
+
+
+                <div class="video-preview"> <!--sixth video-preview-->
+                    <div class="thumbnail-row">
+                         <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                            <img class= "thumbnail" src="thumbnails/thumbnail-6.webp" alt="unable to load the image">
+                         </a>
+                    <div class="video-time">19:59</div>
+                    </div>
+                    <div class="video-info-grid">
+                    <div class="channel-picture">
+                       <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                       </a> 
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                           Anything You Can Fit In The Circle I'll Pay For
+                        </p>
+                        <p class="video-author">
+                            MrBeast
+                        </p>
+                        <p class="video-status">
+                            141M views . 1 year ago
+                        </p>
+                    </div>
+                </div>
+                </div>
+
+
+
+                <div class="video-preview"> <!--sixth video-preview-->
+                    <div class="thumbnail-row">
+                         <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                            <img class= "thumbnail" src="thumbnails/thumbnail-6.webp" alt="unable to load the image">
+                         </a>
+                    <div class="video-time">19:59</div>
+                    </div>
+                    <div class="video-info-grid">
+                    <div class="channel-picture">
+                       <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                       </a> 
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                           Anything You Can Fit In The Circle I'll Pay For
+                        </p>
+                        <p class="video-author">
+                            MrBeast
+                        </p>
+                        <p class="video-status">
+                            141M views . 1 year ago
+                        </p>
+                    </div>
+                </div>
+                </div>
+
+
+                <div class="video-preview"> <!--sixth video-preview-->
+                    <div class="thumbnail-row">
+                         <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                            <img class= "thumbnail" src="thumbnails/thumbnail-6.webp" alt="unable to load the image">
+                         </a>
+                    <div class="video-time">19:59</div>
+                    </div>
+                    <div class="video-info-grid">
+                    <div class="channel-picture">
+                       <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                       </a> 
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                           Anything You Can Fit In The Circle I'll Pay For
+                        </p>
+                        <p class="video-author">
+                            MrBeast
+                        </p>
+                        <p class="video-status">
+                            141M views . 1 year ago
+                        </p>
+                    </div>
+                </div>
+                </div>
+
+
+                <div class="video-preview"> <!--sixth video-preview-->
+                    <div class="thumbnail-row">
+                         <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                            <img class= "thumbnail" src="thumbnails/thumbnail-6.webp" alt="unable to load the image">
+                         </a>
+                    <div class="video-time">19:59</div>
+                    </div>
+                    <div class="video-info-grid">
                     <div class="channel-picture">
                        <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
                         <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
