--- a/youtube.html
+++ b/youtube.html
@@ -286,56 +286,55 @@
 
                 <div class="video-preview"> <!--seventh video-preview-->
                     <div class="thumbnail-row">
-                         <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                         <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y">
                             <img class= "thumbnail" src="thumbnails/thumbnail-7.webp" alt="unable to load the image">
                          </a>
                     <div class="video-time">19:59</div>
                     </div>
                     <div class="video-info-grid">
                     <div class="channel-picture">
-                       <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
-                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                       <a href="https://www.youtube.com/channel/UCP5tjEmvPItGyLhmjdwP7Ww">
+                        <img class="profile-picture" src="channel-pictures/channel-7.jpeg" alt="">
                        </a> 
                     </div>
                     <div class="video-info">
-                        <a style="text-decoration: none;" href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
+                       
                             <p class="video-title">
-                                Anything You Can Fit In The Circle I'll Pay For
+                                Why Planes Don't Fly Over Tibet
                              </p>
-                        </a>
                         <p class="video-author">
-                            MrBeast
+                            RealLifeLore
                         </p>
                         <p class="video-status">
-                            141M views . 1 year ago
+                            6.6M views . 1 year ago
                         </p>
                     </div>
                 </div>
                 </div>
 
 
-                <div class="video-preview"> <!--sixth video-preview-->
+                <div class="video-preview"> <!--eighth video-preview-->
                     <div class="thumbnail-row">
                          <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
-                            <img class= "thumbnail" src="thumbnails/thumbnail-6.webp" alt="unable to load the image">
+                            <img class= "thumbnail" src="thumbnails/thumbnail-8.webp" alt="unable to load the image">
                          </a>
-                    <div class="video-time">19:59</div>
+                    <div class="video-time">7:12</div>
                     </div>
                     <div class="video-info-grid">
                     <div class="channel-picture">
                        <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA">
-                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                        <img class="profile-picture" src="channel-pictures/channel-8.jpeg" alt="">
                        </a> 
                     </div>
                     <div class="video-info">
                         <p class="video-title">
-                           Anything You Can Fit In The Circle I'll Pay For
+                           Inside The World's Biggest Passenger Plane
                         </p>
                         <p class="video-author">
-                            MrBeast
+                            Tech vision
                         </p>
                         <p class="video-status">
-                            141M views . 1 year ago
+                            3.7M views . 10 months ago
                         </p>
                     </div>
                 </div>
