--- a/pesonal-portfolio/portfolio.html
+++ b/pesonal-portfolio/portfolio.html
@@ -38,16 +38,18 @@
   </section>
   <section class="middle-section">
     <div class="information">
-      <p class="first-line"> Hi there I'm </p>
+      <p class="first-line"> Hi there<span class="hello-emogi">&#x1F44B;</span> I'm , </p>
       <p class="second-line"> Nitish Pardal</p>
-      <p class="third-line"> I am a Frontend designer based in india</p>
+      <p class="third-line"> I am a Frontend designer who likes to develop and build interactive websites</p>
+      <button class="hireme-button">Hire me</button>
     </div>
   </section>
   
 
 
-    <div class="line"></div>
+   
     <div class="bottom-header">
+      <div class="line"></div>
 
      <div class="my-skills">
       <p class="my-skills-para">My Skills</p>
